@@ -1,4 +1,8 @@
 = Version History =
+x.x:
+
+- changed: auto notifications now listen to $NOTIFICATION_HANDLERS
+
 2.4 (2012-11-06):
 
 - added: filter groups based on a tag field in index_group widget
